syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "SubmissionEvents.proto";
import "SubmissionLarStatsEvents.proto";

message SubmissionSubmittedTotalsAddedMessage {
    int32 total = 1;
    SubmissionIdMessage id = 2;
}

message SubmissionTaxIdAddedMessage {
    string taxId = 1;
    SubmissionIdMessage id = 2;
}

message SubmissionMacroStatsAddedMessage {
    SubmissionIdMessage id = 1;
    int32 total = 2;
    int32 q070 = 3;
    int32 q070Sold = 4;
    int32 q071 = 5;
    int32 q071Sold = 6;
    int32 q072 = 7;
    int32 q072Sold = 8;
    double q075Ratio = 9;
    double q076Ratio = 10;
}

message IrsStatsAddedMessage {
    repeated MsaMessage msas = 1;
    SubmissionIdMessage id = 2;
}
